--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
         z-index: 97;
         display: none;
       }
+      #tunggus{
+        transform: translate(0px ,4px);
+      }
     </style>
   </head>
   
@@ -242,10 +245,10 @@
             <!-- buka div -->
             <div>
               <div class="btn-group mt-3" id="starts">
-                <button type="button" class="btn text-white dropdown-toggle dropdown-toggle-split disablebtn" data-bs-toggle="dropdown" aria-expanded="false" style="border-radius:5px 0 0 5px;width:20px;padding:0;box-shadow:1px 4px 3px rgba(0,0,0,.4);background-color:#06d151;">
+                <button type="button" class="btn text-white dropdown-toggle dropdown-toggle-split disablebtn" data-bs-toggle="dropdown" aria-expanded="false" style="border-radius:5px 0 0 5px;width:20px;padding:0;box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -7px 5px 0px inset, rgba(0, 0, 0, 0.6) 0px 0px 3px, rgba(0, 0, 0, 0.6) 0px 4px 2px, rgba(0, 0, 0, 0.1) 0px 3px 5px, rgba(0, 0, 0, 0.1) 0px 3px 4px, rgba(0, 0, 0, 0.1) 0px 3px 6px;background-color:#06d151;">
                   <span class="visually-hidden">Toggle Dropdown</span>
                 </button>
-                <button class="btn ps-0 pe-0 fw-bold text-white" id="startspin" style="color:#616161;border-radius:0 5px 5px 0;width:70px;text-shadow:1px 1px 3px rgba(0,0,0,.6);box-shadow:1px 4px 3px rgba(0,0,0,.4);background-color:#06d151;">SPIN</button>
+                <button class="btn ps-0 pe-0 fw-bold text-white" id="startspin" style="color:#616161;border-radius:0 5px 5px 0;width:70px;text-shadow:1px 1px 3px rgba(0,0,0,.6);box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -7px 5px 0px inset, rgba(0, 0, 0, 0.6) 0px 0px 3px, rgba(0, 0, 0, 0.6) 0px 4px 2px, rgba(0, 0, 0, 0.1) 0px 3px 5px, rgba(0, 0, 0, 0.1) 0px 3px 4px, rgba(0, 0, 0, 0.1) 0px 3px 6px;background-color:#06d151;">SPIN</button>
                 <ul class="dropdown-menu p-0 m-0" style="box-shadow:3px 3px 4px rgba(0,0,0,.3);border-radius:10px;max-width:50px;">
                   <li><a  style="border-radius:10px 10px 0 0;" class="dropdown-item spinotomatis" href="#!" data-spinotomatis="10">10</a></li>
                   <li><a class="dropdown-item spinotomatis" href="#!" data-spinotomatis="100">100</a></li>
@@ -260,10 +263,10 @@
                 <button class="btn btn-secondary ps-0 pe-0 fw-bold" style="color:#fff;border-radius:0 5px 5px 0;width:70px;" id="tungguspin">STOP</button>
               </div>
               <div class="btn-group mt-3" id="stops" style="display:none;">
-                <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split disablebtn" style="border-radius:5px 0 0 5px;width:20px;padding:0;box-shadow:1px 4px 3px rgba(0,0,0,.4);" id="btndropdownstop">
+                <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split disablebtn" style="border-radius:5px 0 0 5px;width:20px;padding:0;box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -7px 5px 0px inset, rgba(0, 0, 0, 0.6) 0px 0px 3px, rgba(0, 0, 0, 0.6) 0px 4px 2px, rgba(0, 0, 0, 0.1) 0px 3px 5px, rgba(0, 0, 0, 0.1) 0px 3px 4px, rgba(0, 0, 0, 0.1) 0px 3px 6px;" id="btndropdownstop">
                   <span class="visually-hidden">Toggle Dropdown</span>
                 </button>
-                <button class="btn btn-danger ps-0 pe-0 fw-bold" style="color:#fff;border-radius:0 5px 5px 0;width:70px;text-shadow:1px 1px 3px rgba(0,0,0,.6);box-shadow:1px 4px 3px rgba(0,0,0,.4);" id="stopspin">STOP</button>
+                <button class="btn btn-danger ps-0 pe-0 fw-bold" style="color:#fff;border-radius:0 5px 5px 0;width:70px;text-shadow:1px 1px 3px rgba(0,0,0,.6);box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -7px 5px 0px inset, rgba(0, 0, 0, 0.6) 0px 0px 3px, rgba(0, 0, 0, 0.6) 0px 4px 2px, rgba(0, 0, 0, 0.1) 0px 3px 5px, rgba(0, 0, 0, 0.1) 0px 3px 4px, rgba(0, 0, 0, 0.1) 0px 3px 6px;" id="stopspin">STOP</button>
               </div>
             </div>
             <!-- tutup div -->
