--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
         border-radius: 0px 10px 0px 10px;
       }
       .boxchip{
-        padding:1px 5px 1px 5px;
-        background-color:#eee;
+        padding:2px 7px 4px 7px;
+        background-color:#fff;
         border-radius: 10px 0px 10px 0px;
         font-weight: bold;
         color: #616161;
-        box-shadow:2px 2px 3px rgba(0,0,0,.3)
+        box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -3px 3px 0px inset, rgba(0, 0, 0, 0.3) 0px 0px 3px, rgba(0, 0, 0, 0.3) 0px 3px 2px, rgba(0, 0, 0, 0.1) 0px 2px 3px, rgba(0, 0, 0, 0.1) 0px 2px 4px, rgba(0, 0, 0, 0.1) 0px 2px 3px;
         /*margin-left:5px;*/
       }
       .takebonus{
         padding: 2px 10px 2px 10px;
         border-radius: 10px 10px 0 0;
-        background-color:lightblue;
+        background-color:#04e0dd;
         width:78%;
         text-align:center;
         font-weight:bold;
@@ -133,6 +133,14 @@
       #tunggus{
         transform: translate(0px ,4px);
       }
+      .changebet option{
+        font-weight:bold;
+        padding:0;
+      }
+      .bonus2m{
+        box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -7px 5px 0px inset, rgba(0, 0, 0, 0.6) 0px 0px 3px, rgba(0, 0, 0, 0.6) 0px 4px 2px, rgba(0, 0, 0, 0.1) 0px 3px 5px, rgba(0, 0, 0, 0.1) 0px 3px 4px, rgba(0, 0, 0, 0.1) 0px 3px 6px;
+        font-weight: bold;
+      }
     </style>
   </head>
   
@@ -142,7 +150,7 @@
       <div class="col-12">
 
         <div class="row">
-          <div class="col-12 d-flex justify-content-between align-items-center">
+          <div class="col-12 d-flex justify-content-between align-items-center mb-4">
             <div class="boxchip d-flex">
               <div>CHIP : </div>
               <div class="mychip"></div>
@@ -224,12 +232,12 @@
         </div>
         <!-- tutup display -->
         <div class="row">
-          <div class="col-12 d-flex justify-content-between">
+          <div class="col-12 d-flex justify-content-between mt-3">
             <!-- buka div -->
             <div>
               <div id="bet" class="d-flex mt-3">
-                <span class="d-flex justify-content-center align-items-center" style="font-size:17px;background-color:#ddd;height:38px;padding:3px 5px 3px 5px;color:#616161;border-radius:5px 0 0 5px;font-weight:bold;box-shadow:1px 4px 3px rgba(0,0,0,.4);">Bet</span>
-                <select class="form-select-sm changebet" aria-label=".form-select-sm example" style="height:38px;border-radius:0 5px 5px 0;top:-15px;font-weight:bold;color:#616161;border:1px solid #eee;box-shadow:1px 4px 3px rgba(0,0,0,.4);">
+                <span class="d-flex justify-content-center align-items-center" style="font-size:17px;background-color:#ddd;height:38px;padding:3px 5px 3px 5px;color:#616161;border-radius:5px 0 0 5px;font-weight:bold;box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -7px 5px 0px inset, rgba(0, 0, 0, 0.6) 0px 0px 3px, rgba(0, 0, 0, 0.6) 0px 4px 2px, rgba(0, 0, 0, 0.1) 0px 3px 5px, rgba(0, 0, 0, 0.1) 0px 3px 4px, rgba(0, 0, 0, 0.1) 0px 3px 6px;">Bet</span>
+                <select class="form-select-sm changebet" aria-label=".form-select-sm example" style="height:38px;border-radius:0 5px 5px 0;top:-15px;font-weight:bold;color:#616161;border:1px solid #eee;box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -7px 5px 0px inset, rgba(0, 0, 0, 0.6) 0px 0px 3px, rgba(0, 0, 0, 0.6) 0px 4px 2px, rgba(0, 0, 0, 0.1) 0px 3px 5px, rgba(0, 0, 0, 0.1) 0px 3px 4px, rgba(0, 0, 0, 0.1) 0px 3px 6px;">
                   <option class="options" value="100000">100.000</option>
                   <option class="options" value="300000">300.000</option>
                   <option class="options" value="1000000">1.000.000</option>
@@ -249,11 +257,11 @@
                   <span class="visually-hidden">Toggle Dropdown</span>
                 </button>
                 <button class="btn ps-0 pe-0 fw-bold text-white" id="startspin" style="color:#616161;border-radius:0 5px 5px 0;width:70px;text-shadow:1px 1px 3px rgba(0,0,0,.6);box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -7px 5px 0px inset, rgba(0, 0, 0, 0.6) 0px 0px 3px, rgba(0, 0, 0, 0.6) 0px 4px 2px, rgba(0, 0, 0, 0.1) 0px 3px 5px, rgba(0, 0, 0, 0.1) 0px 3px 4px, rgba(0, 0, 0, 0.1) 0px 3px 6px;background-color:#06d151;">SPIN</button>
-                <ul class="dropdown-menu p-0 m-0" style="box-shadow:3px 3px 4px rgba(0,0,0,.3);border-radius:10px;max-width:50px;">
-                  <li><a  style="border-radius:10px 10px 0 0;" class="dropdown-item spinotomatis" href="#!" data-spinotomatis="10">10</a></li>
-                  <li><a class="dropdown-item spinotomatis" href="#!" data-spinotomatis="100">100</a></li>
-                  <li><a class="dropdown-item spinotomatis" href="#!" data-spinotomatis="500">500</a></li>
-                  <li><a  style="border-radius:0px 0px 10px 10px;font-weight:bold;"class="dropdown-item spinotomatis" href="#!" data-spinotomatis="unlimited"> &#8734;</a></li>
+                <ul class="dropdown-menu p-0 m-0" style="background-color:#fff;border-radius:10px;max-width:50px;">
+                  <li><a  style="border-radius:10px 10px 0 0;box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -3px 3px 0px inset, rgba(0, 0, 0, 0.3) 0px 0px 3px, rgba(0, 0, 0, 0.3) 0px 3px 2px, rgba(0, 0, 0, 0.1) 0px 2px 3px, rgba(0, 0, 0, 0.1) 0px 2px 4px, rgba(0, 0, 0, 0.1) 0px 2px 3px;font-weight:bold;" class="dropdown-item spinotomatis" href="#!" data-spinotomatis="10">10</a></li>
+                  <li><a style="box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -3px 3px 0px inset, rgba(0, 0, 0, 0.3) 0px 0px 3px, rgba(0, 0, 0, 0.3) 0px 3px 2px, rgba(0, 0, 0, 0.1) 0px 2px 3px, rgba(0, 0, 0, 0.1) 0px 2px 4px, rgba(0, 0, 0, 0.1) 0px 2px 3px;font-weight:bold;" class="dropdown-item spinotomatis" href="#!" data-spinotomatis="100">100</a></li>
+                  <li><a style="box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -3px 3px 0px inset, rgba(0, 0, 0, 0.3) 0px 0px 3px, rgba(0, 0, 0, 0.3) 0px 3px 2px, rgba(0, 0, 0, 0.1) 0px 2px 3px, rgba(0, 0, 0, 0.1) 0px 2px 4px, rgba(0, 0, 0, 0.1) 0px 2px 3px;font-weight:bold;" class="dropdown-item spinotomatis" href="#!" data-spinotomatis="500">500</a></li>
+                  <li><a  style="border-radius:0px 0px 10px 10px;font-weight:bold;box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -3px 3px 0px inset, rgba(0, 0, 0, 0.3) 0px 0px 3px, rgba(0, 0, 0, 0.3) 0px 3px 2px, rgba(0, 0, 0, 0.1) 0px 2px 3px, rgba(0, 0, 0, 0.1) 0px 2px 4px, rgba(0, 0, 0, 0.1) 0px 2px 3px;"class="dropdown-item spinotomatis" href="#!" data-spinotomatis="unlimited"> &#8734;</a></li>
                 </ul>
               </div>
               <div class="btn-group mt-3" id="tunggus" style="display:none;">
