mengubah tinggi button tunggu dan stop menjadi 38px

--- a/index.html
+++ b/index.html
@@ -274,16 +274,16 @@
                 </ul>
               </div>
               <div class="btn-group mt-3" id="tunggus" style="display:none;">
-                <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split disablebtn" style="border-radius:5px 0 0 5px;width:20px;padding:0;" id="btndropdown">
+                <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split disablebtn" style="border-radius:5px 0 0 5px;width:20px;height:38px;padding:0;" id="btndropdown">
                   <span class="visually-hidden">Toggle Dropdown</span>
                 </button>
-                <button class="btn btn-secondary ps-0 pe-0 fw-bold" style="color:#fff;border-radius:0 5px 5px 0;width:70px;" id="tungguspin">STOP</button>
+                <button class="btn btn-secondary ps-0 pe-0 fw-bold" style="color:#fff;border-radius:0 5px 5px 0;width:70px;height:38px;" id="tungguspin">STOP</button>
               </div>
               <div class="btn-group mt-3" id="stops" style="display:none;">
-                <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split disablebtn" style="border-radius:5px 0 0 5px;width:20px;padding:0;box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -7px 5px 0px inset, rgba(0, 0, 0, 0.6) 0px 0px 3px, rgba(0, 0, 0, 0.6) 0px 4px 2px, rgba(0, 0, 0, 0.1) 0px 3px 5px, rgba(0, 0, 0, 0.1) 0px 3px 4px, rgba(0, 0, 0, 0.1) 0px 3px 6px;" id="btndropdownstop">
+                <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split disablebtn" style="border-radius:5px 0 0 5px;width:20px;height:38px;padding:0;box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -7px 5px 0px inset, rgba(0, 0, 0, 0.6) 0px 0px 3px, rgba(0, 0, 0, 0.6) 0px 4px 2px, rgba(0, 0, 0, 0.1) 0px 3px 5px, rgba(0, 0, 0, 0.1) 0px 3px 4px, rgba(0, 0, 0, 0.1) 0px 3px 6px;" id="btndropdownstop">
                   <span class="visually-hidden">Toggle Dropdown</span>
                 </button>
-                <button class="btn btn-danger ps-0 pe-0 fw-bold" style="color:#fff;border-radius:0 5px 5px 0;width:70px;text-shadow:1px 1px 3px rgba(0,0,0,.6);box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -7px 5px 0px inset, rgba(0, 0, 0, 0.6) 0px 0px 3px, rgba(0, 0, 0, 0.6) 0px 4px 2px, rgba(0, 0, 0, 0.1) 0px 3px 5px, rgba(0, 0, 0, 0.1) 0px 3px 4px, rgba(0, 0, 0, 0.1) 0px 3px 6px;" id="stopspin">STOP</button>
+                <button class="btn btn-danger ps-0 pe-0 fw-bold" style="color:#fff;border-radius:0 5px 5px 0;width:70px;height:38px;text-shadow:1px 1px 3px rgba(0,0,0,.6);box-shadow: rgba(0, 0, 0, 0.1) 0px -5px 6px 0px inset, rgba(0, 0, 0, 0.5) 0px -2px 6px 0px inset, rgba(0, 0, 0, 0.3) 0px -7px 5px 0px inset, rgba(0, 0, 0, 0.6) 0px 0px 3px, rgba(0, 0, 0, 0.6) 0px 4px 2px, rgba(0, 0, 0, 0.1) 0px 3px 5px, rgba(0, 0, 0, 0.1) 0px 3px 4px, rgba(0, 0, 0, 0.1) 0px 3px 6px;" id="stopspin">STOP</button>
               </div>
             </div>
             <!-- tutup div -->
