menambahkan fitur item gambar baru dan menjadi 11 item

--- a/index.html
+++ b/index.html
@@ -189,53 +189,53 @@
         <div class="display">
           <div class="slot">
             <div class="value">
-              <div class="hasil1"><img src="img/g8.gif" width="90%" height="90%"></div>
-              <div><img src="img/g3.gif" width="90%" height="90%"></div>
-              <div><img src="img/g6.gif" width="90%" height="90%"></div>
-              <div><img src="img/g4.gif" width="90%" height="90%"></div>
-              <div><img src="img/g2.gif" width="90%" height="90%"></div>
-              <div><img src="img/g8.gif" width="90%" height="90%"></div>
-              <div><img src="img/g1.gif" width="90%" height="90%"></div>
-              <div><img src="img/g5.gif" width="90%" height="90%"></div>
-              <div><img src="img/g3.gif" width="90%" height="90%"></div>
-              <div><img src="img/g2.gif" width="90%" height="90%"></div>
-              <div><img src="img/g6.gif" width="90%" height="90%"></div>
-              <div><img src="img/g7.gif" width="90%" height="90%"></div>
-              <div><img src="img/g8.gif" width="90%" height="90%"></div>
+              <div class="hasil1"><img src="img/item/kakekmerah.png" width="90%" height="90%"></div>
+              <div><img src="img/item/bocilping.png" width="90%" height="90%"></div>
+              <div><img src="img/item/j.png" width="90%" height="90%"></div>
+              <div><img src="img/item/liontin.png" width="90%" height="90%"></div>
+              <div><img src="img/item/q.png" width="90%" height="90%"></div>
+              <div><img src="img/item/koin.png" width="90%" height="90%"></div>
+              <div><img src="img/item/bocilijo.png" width="90%" height="90%"></div>
+              <div><img src="img/item/kendang.png" width="90%" height="90%"></div>
+              <div><img src="img/item/petasan.png" width="90%" height="90%"></div>
+              <div><img src="img/item/kakekbiru.png" width="90%" height="90%"></div>
+              <div><img src="img/item/k.png" width="90%" height="90%"></div>
+              <div><img src="img/item/liontin.png" width="90%" height="90%"></div>
+              <div><img src="img/item/bocilping.png" width="90%" height="90%"></div>
             </div>
           </div>
           <div class="slot">
             <div class="value">
-              <div class="hasil2"><img src="img/g1.gif" width="90%" height="90%"></div>
-              <div><img src="img/g5.gif" width="90%" height="90%"></div>
-              <div><img src="img/g3.gif" width="90%" height="90%"></div>
-              <div><img src="img/g7.gif" width="90%" height="90%"></div>
-              <div><img src="img/g4.gif" width="90%" height="90%"></div>
-              <div><img src="img/g2.gif" width="90%" height="90%"></div>
-              <div><img src="img/g6.gif" width="90%" height="90%"></div>
-              <div><img src="img/g8.gif" width="90%" height="90%"></div>
-              <div><img src="img/g1.gif" width="90%" height="90%"></div>
-              <div><img src="img/g2.gif" width="90%" height="90%"></div>
-              <div><img src="img/g3.gif" width="90%" height="90%"></div>
-              <div><img src="img/g6.gif" width="90%" height="90%"></div>
-              <div><img src="img/g7.gif" width="90%" height="90%"></div>
+              <div class="hasil2"><img src="img/item/kakekbiru.png" width="90%" height="90%"></div>
+              <div><img src="img/item/k.png" width="90%" height="90%"></div>
+              <div><img src="img/item/liontin.png" width="90%" height="90%"></div>
+              <div><img src="img/item/bocilping.png" width="90%" height="90%"></div>
+              <div><img src="img/item/petasan.png" width="90%" height="90%"></div>
+              <div><img src="img/item/kendang.png" width="90%" height="90%"></div>
+              <div><img src="img/item/bocilijo.png" width="90%" height="90%"></div>
+              <div><img src="img/item/koin.png" width="90%" height="90%"></div>
+              <div><img src="img/item/q.png" width="90%" height="90%"></div>
+              <div><img src="img/item/liontin.png" width="90%" height="90%"></div>
+              <div><img src="img/item/j.png" width="90%" height="90%"></div>
+              <div><img src="img/item/bocilping.png" width="90%" height="90%"></div>
+              <div><img src="img/item/kakekmerah.png" width="90%" height="90%"></div>
             </div>
           </div>
           <div class="slot">
             <div class="value">
-              <div class="hasil3"><img src="img/g3.gif" width="90%" height="90%"></div>
-              <div><img src="img/g6.gif" width="90%" height="90%"></div>
-              <div><img src="img/g5.gif" width="90%" height="90%"></div>
-              <div><img src="img/g1.gif" width="90%" height="90%"></div>
-              <div><img src="img/g8.gif" width="90%" height="90%"></div>
-              <div><img src="img/g7.gif" width="90%" height="90%"></div>
-              <div><img src="img/g1.gif" width="90%" height="90%"></div>
-              <div><img src="img/g4.gif" width="90%" height="90%"></div>
-              <div><img src="img/g2.gif" width="90%" height="90%"></div>
-              <div><img src="img/g6.gif" width="90%" height="90%"></div>
-              <div><img src="img/g8.gif" width="90%" height="90%"></div>
-              <div><img src="img/g1.gif" width="90%" height="90%"></div>
-              <div><img src="img/g2.gif" width="90%" height="90%"></div>
+              <div class="hasil3"><img src="img/item/bocilijo.png" width="90%" height="90%"></div>
+              <div><img src="img/item/kendang.png" width="90%" height="90%"></div>
+              <div><img src="img/item/petasan.png" width="90%" height="90%"></div>
+              <div><img src="img/item/bocilping.png" width="90%" height="90%"></div>
+              <div><img src="img/item/liontin.png" width="90%" height="90%"></div>
+              <div><img src="img/item/k.png" width="90%" height="90%"></div>
+              <div><img src="img/item/kakekbiru.png" width="90%" height="90%"></div>
+              <div><img src="img/item/koin.png" width="90%" height="90%"></div>
+              <div><img src="img/item/q.png" width="90%" height="90%"></div>
+              <div><img src="img/item/kakekmerah.png" width="90%" height="90%"></div>
+              <div><img src="img/item/bocilping.png" width="90%" height="90%"></div>
+              <div><img src="img/item/j.png" width="90%" height="90%"></div>
+              <div><img src="img/item/liontin.png" width="90%" height="90%"></div>
             </div>
           </div>
         </div>
