mengganti bacground warna baru

--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
   
   <body>
 
+    <div class="body">
+
+      
     <div class="row">
       <div class="col-12">
 
@@ -189,53 +192,53 @@
         <div class="display">
           <div class="slot">
             <div class="value">
-              <div class="hasil1"><img src="img/item/kakekmerah.png" width="90%" height="90%"></div>
-              <div><img src="img/item/bocilping.png" width="90%" height="90%"></div>
-              <div><img src="img/item/j.png" width="90%" height="90%"></div>
-              <div><img src="img/item/liontin.png" width="90%" height="90%"></div>
-              <div><img src="img/item/q.png" width="90%" height="90%"></div>
-              <div><img src="img/item/koin.png" width="90%" height="90%"></div>
-              <div><img src="img/item/bocilijo.png" width="90%" height="90%"></div>
-              <div><img src="img/item/kendang.png" width="90%" height="90%"></div>
-              <div><img src="img/item/petasan.png" width="90%" height="90%"></div>
-              <div><img src="img/item/kakekbiru.png" width="90%" height="90%"></div>
-              <div><img src="img/item/k.png" width="90%" height="90%"></div>
-              <div><img src="img/item/liontin.png" width="90%" height="90%"></div>
-              <div><img src="img/item/bocilping.png" width="90%" height="90%"></div>
+              <div class="hasil1"><img src="img/item/kakekmerah.png" width="100%" height="100%"></div>
+              <div><img src="img/item/bocilping.png" width="100%" height="100%"></div>
+              <div><img src="img/item/j.png" width="100%" height="100%"></div>
+              <div><img src="img/item/liontin.png" width="100%" height="100%"></div>
+              <div><img src="img/item/q.png" width="100%" height="100%"></div>
+              <div><img src="img/item/koin.png" width="100%" height="100%"></div>
+              <div><img src="img/item/bocilijo.png" width="100%" height="100%"></div>
+              <div><img src="img/item/kendang.png" width="100%" height="100%"></div>
+              <div><img src="img/item/petasan.png" width="100%" height="100%"></div>
+              <div><img src="img/item/kakekbiru.png" width="100%" height="100%"></div>
+              <div><img src="img/item/k.png" width="100%" height="100%"></div>
+              <div><img src="img/item/liontin.png" width="100%" height="100%"></div>
+              <div><img src="img/item/bocilping.png" width="100%" height="100%"></div>
             </div>
           </div>
           <div class="slot">
             <div class="value">
-              <div class="hasil2"><img src="img/item/kakekbiru.png" width="90%" height="90%"></div>
-              <div><img src="img/item/k.png" width="90%" height="90%"></div>
-              <div><img src="img/item/liontin.png" width="90%" height="90%"></div>
-              <div><img src="img/item/bocilping.png" width="90%" height="90%"></div>
-              <div><img src="img/item/petasan.png" width="90%" height="90%"></div>
-              <div><img src="img/item/kendang.png" width="90%" height="90%"></div>
-              <div><img src="img/item/bocilijo.png" width="90%" height="90%"></div>
-              <div><img src="img/item/koin.png" width="90%" height="90%"></div>
-              <div><img src="img/item/q.png" width="90%" height="90%"></div>
-              <div><img src="img/item/liontin.png" width="90%" height="90%"></div>
-              <div><img src="img/item/j.png" width="90%" height="90%"></div>
-              <div><img src="img/item/bocilping.png" width="90%" height="90%"></div>
-              <div><img src="img/item/kakekmerah.png" width="90%" height="90%"></div>
+              <div class="hasil2"><img src="img/item/kakekbiru.png" width="100%" height="100%"></div>
+              <div><img src="img/item/k.png" width="100%" height="100%"></div>
+              <div><img src="img/item/liontin.png" width="100%" height="100%"></div>
+              <div><img src="img/item/bocilping.png" width="100%" height="100%"></div>
+              <div><img src="img/item/petasan.png" width="100%" height="100%"></div>
+              <div><img src="img/item/kendang.png" width="100%" height="100%"></div>
+              <div><img src="img/item/bocilijo.png" width="100%" height="100%"></div>
+              <div><img src="img/item/koin.png" width="100%" height="100%"></div>
+              <div><img src="img/item/q.png" width="100%" height="100%"></div>
+              <div><img src="img/item/liontin.png" width="100%" height="100%"></div>
+              <div><img src="img/item/j.png" width="100%" height="100%"></div>
+              <div><img src="img/item/bocilping.png" width="100%" height="100%"></div>
+              <div><img src="img/item/kakekmerah.png" width="100%" height="100%"></div>
             </div>
           </div>
           <div class="slot">
             <div class="value">
-              <div class="hasil3"><img src="img/item/bocilijo.png" width="90%" height="90%"></div>
-              <div><img src="img/item/kendang.png" width="90%" height="90%"></div>
-              <div><img src="img/item/petasan.png" width="90%" height="90%"></div>
-              <div><img src="img/item/bocilping.png" width="90%" height="90%"></div>
-              <div><img src="img/item/liontin.png" width="90%" height="90%"></div>
-              <div><img src="img/item/k.png" width="90%" height="90%"></div>
-              <div><img src="img/item/kakekbiru.png" width="90%" height="90%"></div>
-              <div><img src="img/item/koin.png" width="90%" height="90%"></div>
-              <div><img src="img/item/q.png" width="90%" height="90%"></div>
-              <div><img src="img/item/kakekmerah.png" width="90%" height="90%"></div>
-              <div><img src="img/item/bocilping.png" width="90%" height="90%"></div>
-              <div><img src="img/item/j.png" width="90%" height="90%"></div>
-              <div><img src="img/item/liontin.png" width="90%" height="90%"></div>
+              <div class="hasil3"><img src="img/item/bocilijo.png" width="100%" height="100%"></div>
+              <div><img src="img/item/kendang.png" width="100%" height="100%"></div>
+              <div><img src="img/item/petasan.png" width="100%" height="100%"></div>
+              <div><img src="img/item/bocilping.png" width="100%" height="100%"></div>
+              <div><img src="img/item/liontin.png" width="100%" height="100%"></div>
+              <div><img src="img/item/k.png" width="100%" height="100%"></div>
+              <div><img src="img/item/kakekbiru.png" width="100%" height="100%"></div>
+              <div><img src="img/item/koin.png" width="100%" height="100%"></div>
+              <div><img src="img/item/q.png" width="100%" height="100%"></div>
+              <div><img src="img/item/kakekmerah.png" width="100%" height="100%"></div>
+              <div><img src="img/item/bocilping.png" width="100%" height="100%"></div>
+              <div><img src="img/item/j.png" width="100%" height="100%"></div>
+              <div><img src="img/item/liontin.png" width="100%" height="100%"></div>
             </div>
           </div>
         </div>
@@ -293,6 +296,9 @@
         </div>
 
       </div>
+    </div>
+
+
     </div>
 
     
