--- a/index.html
+++ b/index.html
@@ -150,6 +150,27 @@
         color:salmon;
         text-shadow:0px 4px 3px rgba(0,0,0,.7);
       }
+      /*.bounce2 {
+        animation: bounce2 2s ease;
+      }
+      @keyframes bounce2 {
+        0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+        40% {transform: translateY(-30px);}
+        60% {transform: translateY(-15px);}
+      }*/
+      .bounce7 {
+        animation: bounce7 2s ease;
+        animation-timing-function: cubic-bezier(0.280, 0.840, 0.420, 1);
+      }
+      @keyframes bounce7 {
+          0%   { transform: scale(1,1)      translateY(0); }
+          10%  { transform: scale(1.2,.5)   translateY(0); }
+          30%  { transform: scale(.9,1.1)   translateY(-20px); }
+          50%  { transform: scale(1.09,.8) translateY(20px); }
+          57%  { transform: scale(1,1.1)      translateY(-7px); }
+          64%  { transform: scale(1,1)      translateY(0px); }
+          100% { transform: scale(1,1)      translateY(0); }
+      }
     </style>
   </head>
   
@@ -314,6 +335,21 @@
     </audio>
     <audio id="btnstop">
       <source src="audio/btnstop.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="soundjp">
+      <source src="audio/fafafa/jp_trigger.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="bigwin">
+      <source src="audio/fafafa/bigwin.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="megawin">
+      <source src="audio/fafafa/megawin.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="superwin">
+      <source src="audio/fafafa/superwin.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="midwin">
+      <source src="audio/fafafa/midwin.mp3" type="audio/mpeg">
     </audio>
     <!-- tutup musik -->
 
